--- a/404.html
+++ b/404.html
@@ -9,6 +9,7 @@ layout: default
     max-width: 600px;
     text-align: center;
   }
+
   h1 {
     margin: 30px 0;
     font-size: 4em;
@@ -18,8 +19,10 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
+  <h1>Et là, c'est le drame !</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p>
+    Apparemment, il n'y a pas de page à cette adresse. Dites nous d'où vous venez et quel est le lien sur lequel vous tombez à
+    <a href="mailto:commentaire@lescastcodeurs.com">commentaire@lescastcodeurs.com</a> histoire que l'on corrige cela vite fait.
+  </p>
 </div>
