Migration de la page d'accueil
- Modification du layout home pour se rapprocher du style de la page d'accueil du site actuel.
- Modification du titre des articles en page d'accueil pour se rapprocher du format utilisé sur la page d'accueil du site actuel.
- Affichage du nombre de commentaires Disqus sur chaque article en page d'accueil. Le nombre de commentaire est affiché même en environnement 'development' car on se sert des URLs de production pour les afficher. Il n'a pas été possible de conserver le 'disqus-identifier' car le calcul de l'identifiant nécessite de pouvoir faire avec Jekyll quelque chose d'équivalent à Digest::SHA1.hexdigest, ce qui ne semble pas possible. On s'est donc basé directement sur l'URL absolue des articles. Ça ne semble pas poser de problème dans la mesure où le site actuel semble aussi n'utiliser que l'URL et pas cette fonctionnalité.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,34 @@
 ---
 layout: home
 ---
+
+<div class="jumbotron">
+  <div class="container">
+    <h1 class="page-heading">Le podcast Java en Français</h1>
+
+    <p>
+      <img class="img-responsive home-logo" src="{% link /images/logo_carre_transparent_150height.png %}" alt="logo">
+      Les Cast Codeurs est un podcast en français <strong>de, par et pour les développeurs</strong>.
+    </p>
+
+    <p>
+      Prenez connaissance des <strong>dernières nouvelles</strong> de la sphère <strong>Java</strong> et
+      du développement en général. Plongez sur un sujet précis avec les épisodes
+      <strong>interview</strong>.
+    </p>
+
+    <p>
+      Supportez les radotages de vos hôtes :
+      <strong>Emmanuel Bernard</strong> (JBoss, Hibernate),
+      <strong>Arnaud Héritier</strong> (CloudBees, Jenkins),
+      <strong>Guillaume Laforge</strong> (Google, Groovy),
+      <strong>Antonio Goncalves</strong> (freelance, auteur),
+      <strong>Vincent Massol</strong> (XWiki, Maven),
+      <strong>Audrey Neveu</strong> (Reactor/Spring, Devoxx4Kids).
+    </p>
+
+    <div class="pull-right">
+      <a class="btn btn-lg btn-primary" href="{% link concept.md %}" role="button">En savoir plus</a>
+    </div>
+  </div>
+</div>
