Correction du titre de la page d'accueil / des pages de listing des articles
Malheureusement je n'ai pas trouvé le moyen de traduire le <title> à partir de la page 2. On aura donc pour ces pages :

  Page N of X for Le podcast Java en Français | Les Cast Codeurs Podcast

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 ---
 layout: home
+title: Le podcast Java en Français
 ---
 
 <div class="jumbotron">
   <div class="container">
-    <h1 class="page-heading">Le podcast Java en Français</h1>
-
     <p>
       <img class="img-responsive home-logo" src="{% link /images/logo_carre_transparent_150height.png %}" alt="logo">
       Les Cast Codeurs est un podcast en français <strong>de, par et pour les développeurs</strong>.
