Migration vers bootstrap
Ce commit nous rapproche de l'UI actuelle et terme de rendu et de fonctionnalité.

Pour conserver une maintenance facile les CSS / Javascripts de bootstrap sont :
- importés via des CDNs (afin de ne pas avoir à copier les fichiers à chaque mise à jour)
- déclaré dans la configuration du site (pour centraliser n'avoir qu'un endroit à mettre à jour)

L'utilisation de CDN ne permet par contre pas :
- la configuration et l'extension de bootstrap avec SAAS (car aurait nécessité de copier les SCSS de Bootstrap dans le projet)
- la mise à jour via bundler (car impossible sans utiliser jekyll-assets - qui ne supporte pas Jekyll 4 / n'est pas comptatible GitHub Pages)

--- a/equipe.html
+++ b/equipe.html
@@ -5,33 +5,27 @@ layout: page
 
 <div class="team">
   {% for member in site.team %}
-  <div class="team-member">
-    <div class="team-member-header">
-      <h2>{{ member.name }}</h2>
-
-      <div class="team-member-links">
+  <div class="card border-0 border-bottom">
+    <div class="card-body ml-0 pl-0 mr-0 pr-0">
+      <div class="card-title">
+        <h2 class="d-inline mb-0">{{ member.name }}</h2>
+        <span class="team-member-links align-super">
         {% if member.website %}
-        <a href="{{ member.website }}">
-          <img src="{% link /images/services/web_32.png %}" alt="site"/>
-          Site
-        </a>
+        <a href="{{ member.website }}"><img src="{% link /images/services/web_32.png %}" alt="site"/> Site</a>
         {% endif %}
-
         {% if member.blog %}
-        <img src="{% link /images/services/rss_32.png %}" alt="blog"/>
-        <a href="{{ member.blog }}">Blog</a>
+        <a href="{{ member.blog }}"><img src="{% link /images/services/rss_32.png %}" alt="blog"/> Blog</a>
         {% endif %}
-
         {% if member.twitter %}
-        <img src="{% link /images/services/twitter_32.png %}" alt="twitter"/>
-        <a href="http://twitter.com/{{ member.twitter }}">Twitter</a>
+        <a href="http://twitter.com/{{ member.twitter }}"><img src="{% link /images/services/twitter_32.png %}" alt="twitter"/> Twitter</a>
         {% endif %}
+        </span>
       </div>
-    </div>
 
-    <div class="team-member-description">
-      <img class="team-member-photo" src="https://www.gravatar.com/avatar/{{ member.gravatar_hash }}?s=150" alt="photo"/>
-      {{ member.content | markdownify }}
+      <p class="card-text">
+        <img class="float-left mt-2 mr-2" src="https://www.gravatar.com/avatar/{{ member.gravatar_hash }}?s=150" alt="{{ member.name }}"/>
+        {{ member.content | markdownify }}
+      </p>
     </div>
   </div>
   {% endfor %}
