--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: Le podcast Java en Français
       <strong>Emmanuel Bernard</strong> (JBoss, Hibernate),
       <strong>Arnaud Héritier</strong> (CloudBees, Jenkins),
       <strong>Guillaume Laforge</strong> (Google, Groovy),
-      <strong>Antonio Goncalves</strong> (freelance, auteur),
+      <strong>Antonio Goncalves</strong> (Microsoft, auteur),
       <strong>Vincent Massol</strong> (XWiki, Maven),
       <strong>Audrey Neveu</strong> (Reactor/Spring, Devoxx4Kids).
     </p>
