[update] Arnaud joined Doctolib

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: Le podcast Java en Français
     <p>
       Supportez les radotages de vos hôtes :
       <strong>Emmanuel Bernard</strong> (JBoss, Hibernate),
-      <strong>Arnaud Héritier</strong> (CloudBees, Jenkins),
+      <strong>Arnaud Héritier</strong> (Doctolib, Jenkins),
       <strong>Guillaume Laforge</strong> (Google, Groovy),
       <strong>Antonio Goncalves</strong> (Microsoft, auteur),
       <strong>Vincent Massol</strong> (XWiki, Maven),
