Utilisation de liens HTTPS sur la page 'L'équipe'

--- a/equipe.html
+++ b/equipe.html
@@ -21,7 +21,7 @@ layout: page
           </a>
           {% endif %}
           {% if member.twitter %}
-          <a href="http://twitter.com/{{ member.twitter }}" class="d-inline-flex align-items-center mr-2 mb-2">
+          <a href="https://twitter.com/{{ member.twitter }}" class="d-inline-flex align-items-center mr-2 mb-2">
               <em class="bi bi-twitter twitter-blue mr-1"></em> Twitter
           </a>
           {% endif %}
