Team update, lien Sondage

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ title: Le podcast Java en Français
       <strong>Antonio Goncalves</strong> (Microsoft, auteur),
       <strong>Vincent Massol</strong> (XWiki, Maven),
       <strong>Audrey Neveu</strong> (Reactor/Spring, Devoxx4Kids).
+      <strong>Katia Aresti</strong> (Red Hat, Infinispan).
     </p>
 
     <div class="more-info text-right">
