--- a/equipe.html
+++ b/equipe.html
@@ -4,7 +4,8 @@ layout: page
 ---
 
 <div class="team">
-  {% for member in site.team %}
+    {% for member in site.team %}
+    {% unless member.alumni %}
   <div class="card border-0 border-bottom">
     <div class="card-body ml-0 pl-0 mr-0 pr-0">
       <div class="card-title">
@@ -34,5 +35,44 @@ layout: page
       </p>
     </div>
   </div>
+  {% endunless %}
+  {% endfor %}
+</div>
+
+<div class="team">
+    <h2>Alumni</h2>
+    <span>Nos valeureux retraités</span>
+    {% for member in site.team %}
+    {% if member.alumni %}
+  <div class="card border-0 border-bottom">
+    <div class="card-body ml-0 pl-0 mr-0 pr-0">
+      <div class="card-title">
+        <span class="h3 m-0 p-0">{{ member.name }}</span>
+        <span class="fs-1_5 ml-4">
+          {% if member.website %}
+          <a href="{{ member.website }}" class="d-inline-flex align-items-center mr-2 mb-2">
+              <em class="bi bi-globe black mr-1"></em> Site
+          </a>
+          {% endif %}
+          {% if member.blog %}
+          <a href="{{ member.blog }}" class="d-inline-flex align-items-center mr-2 mb-2">
+              <em class="bi bi-rss-fill rss-orange mr-1"></em> Blog
+          </a>
+          {% endif %}
+          {% if member.twitter %}
+          <a href="https://twitter.com/{{ member.twitter }}" class="d-inline-flex align-items-center mr-2 mb-2">
+              <em class="bi bi-twitter twitter-blue mr-1"></em> Twitter
+          </a>
+          {% endif %}
+        </span>
+      </div>
+
+      <p class="card-text">
+        <img class="float-left mt-2 mr-2 rounded" src="https://www.gravatar.com/avatar/{{ member.gravatar_hash }}?s=150" alt="{{ member.name }}"/>
+        {{ member.content | markdownify }}
+      </p>
+    </div>
+  </div>
+  {% endif %}
   {% endfor %}
 </div>
