Update  tagline and  Remove alumni from the home page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Le podcast Java en Français
 
     <p>
       <img class="img-fluid home-logo float-left mt-2 mr-2" src="{% link /images/logo_carre_transparent_150height.png %}" alt="logo">
-      Les Cast Codeurs est un podcast en français <strong>de, par et pour les développeurs</strong>.
+      Les Cast Codeurs : le podcast en français <strong>de, par et pour les développeurs</strong>.
     </p>
 
     <p>
@@ -19,12 +19,10 @@ title: Le podcast Java en Français
 
     <p>
       Supportez les radotages de vos hôtes :
-      <strong>Emmanuel Bernard</strong> (JBoss, Hibernate),
+      <strong>Emmanuel Bernard</strong> (Red Hat, Hibernate, Quarkus),
       <strong>Arnaud Héritier</strong> (Doctolib, Jenkins),
       <strong>Guillaume Laforge</strong> (Google, Groovy),
       <strong>Antonio Goncalves</strong> (Microsoft, auteur),
-      <strong>Vincent Massol</strong> (XWiki, Maven),
-      <strong>Audrey Neveu</strong> (Reactor/Spring, Devoxx4Kids).
       <strong>Katia Aresti</strong> (Red Hat, Infinispan).
     </p>
 
